# Eversioner

./: LICENSE  README.md  next_steps.md  pyproject.toml  requirements.txt
codes/: .env  main.py  questions.py
eversioner/: database.py  docx_creator.py  exam.py  main.py  utils.py
